# larkbot_v2

./: .pre-commit-config.yaml  README.md  env.example  pyproject.toml  requirements.txt
src/larkbot_v2/: __main__.py  app.py  bot.py  config.py  logger.py
src/larkbot_v2/utils/: feishu.py
