[project]
name = "larkbot_lkml"
version = "0.0.1"
description = "Lark Bot for LKML V2"
authors = [
    {name = "jingfelix", email = "jingfelix@outlook.com"},
]
dependencies = [
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic-settings>=2.3.4,<2.4.0",
    "schedule>=1.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
